# finance-tracker

./: .env  .env.example  .gitignore  .rsyncignore  CI_CD_SETUP.md  CLOUDFLARE_DNS_SETUP.md  DEPLOYMENT_TROUBLESHOOTING.md  FIX_DOCKER_API.md  FIX_TRAEFIK.md  GITHUB_ACTIONS_SETUP.md  PRODUCTION_DEPLOYMENT.md  QUICK_START_GITHUB_ACTIONS.md  README.md  SERVER_CLEANUP.md  SETUP_FROM_SCRATCH.md  SMTP_SETUP.md  SSH_CONNECTION_TROUBLESHOOTING.md  SUPERVISOR_MIGRATION.md  check-build-status.sh  check-health.sh  cleanup-and-deploy.sh  cleanup-server-advanced.sh  cleanup-server.sh  deploy-on-server.sh  deploy-to-server.sh  deployment.md  development.md  diagnose-ssh-connection.sh  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  docker-postgres.yml  example.env  fix-docker-api-version.sh  fix-traefik-manual.md  fix-traefik-on-server.sh  fix-traefik.sh  global.d.ts  install-docker.sh  manual-deploy.sh  (+6 more)
.github/: CI_DEBUGGING.md
.github/ISSUE_TEMPLATE/: config.yml  general.yml
.github/instructions/: backend-instructions.md  frontend-instructions.md
.github/workflows/: README.md  add-to-project.yml  build-and-push.yml  ci.yml  deploy-production.yml  deploy-staging.yml  detect-conflicts.yml  generate-client.yml  issue-manager.yml  labeler.yml  latest-changes.yml  playwright.yml
backend/: .env.example  .gitignore  Dockerfile  QUICK_REFERENCE.md  README.md  SUPERVISOR.md  alembic.ini  check_products.py  classify_products.py  generate_openapi.py  pyproject.toml  requirements.txt  scheduler.py  scheduler_cron.sh  seed_payment_methods.py  seed_products.py  supervisor-ctl.sh  supervisord.conf  test-supervisor-setup.sh  test_products_import.csv  test_products_with_errors.csv  wiseman-scheduler.service
backend/alembic/: env.py
backend/alembic/versions/: dbeb911aea3b_init.py
backend/app/: backend_pre_start.py  background_services.py  crud.py  database.py  initial_data.py  main.py  models.py  schemas.py  utils.py
backend/app/api/: deps.py  main.py
backend/app/api/routers/: auth.py
backend/app/api/routes/: analytics.py  bulk_import.py  customers.py  debts.py  expenses.py  grn.py  login.py  media.py  notifications.py  products.py  reminders.py  sales.py  shift_reconciliation.py  stock_entries.py  supplier_debts.py  till.py  users.py
backend/app/api/utils/: __init__.py  till_utils.py
backend/app/auth/: jwt_handler.py
backend/app/core/: config.py  db.py  logging_config.py  security.py
backend/app/crud/: user_crud.py
backend/app/db/: base.py  session.py
backend/app/email-templates/src/: debt_reminder.mjml  low_stock_notification.mjml  reorder_alert.mjml
backend/app/migrations/: env.py
backend/app/migrations/versions/: 125c8b1e479f_add_supplier_debts_notifications_credit_.py  39649eee44f0_.py  6a72763fceb5_add_bulk_import_session_table.py  88135429081f_make_product_tag_id_required.py  9fd90704b796_update_media_table_for_file_upload.py  a1b2c3d4e5f6_promote_tags_to_categories_and_remove_tags.py  add_sale_payment_table.py  add_username_and_auditor_role.py  b125c8790ea0_add_performance_indexes.py  c3630b310ec1_initial_migration.py  dc3fa9d8106e_add_grn_supplier_transporter_tables.py  f0ca4430182b_add_refresh_token_table.py  fd69c021f227_add_product_tag_table.py
backend/app/models/: account.py  budget.py  category.py  models.py  refresh_token.py  transaction.py  user.py
backend/app/routers/: auth.py  transactions.py  users.py
backend/app/schemas/: auth.py  user.py
backend/app/services/: auth_service.py  token_service.py
backend/app/utils/: __init__.py  sqlalchemy_helpers.py
backend/scripts/: prestart.sh
frontend/: .env  COLOR_PALETTE.md  Dockerfile  Dockerfile.dev  biome.json  bundle-analysis.html  index.html  nginx.conf  openapi.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
frontend/.tanstack/tmp/: 9284d545-eb07743adde28f151ee7466f6bb9687c
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(profile)/account/: index.tsx  page.tsx
frontend/app/(profile)/profile/: index.tsx  page.tsx
frontend/app/(profile)/settings/: index.tsx  page.tsx
frontend/app/auth/: FinanceLogin.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/customers/: index.tsx  page.tsx
frontend/app/dashboard/payments/: index.tsx  page.tsx
frontend/app/dashboard/products/: index.tsx  page.tsx
frontend/app/dashboard/profile/: index.tsx  page.tsx
frontend/app/dashboard/transactions/: index.tsx  page.tsx
frontend/components/Dashboard/: ChartOne.tsx  ChartThree.tsx  ChatCard.tsx  ProgressCard.tsx  Stats.tsx  TableOne.tsx  TopBar.tsx
frontend/components/Dashboard/layout/: DashboardLayout.tsx  Header.tsx  Sidebar.tsx
frontend/components/dashboard/: ErrorBoundary.tsx  NotificationPanel.tsx  Stats.tsx
frontend/components/dashboard/layout/: BreadCrumb.tsx  Sidebar.tsx  TopBar.tsx
frontend/contexts/: AuthContext.tsx
frontend/providers/: ThemeProvider.tsx
frontend/services/: apiService.ts
frontend/src/: main.tsx  routeTree.gen.ts  theme.tsx  utils.ts
frontend/src/client/: schemas.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/hooks/: useAuth.ts  useAutoRefresh.ts  useNotifications.ts  usePageMetadata.ts  usePageVisits.ts
frontend/src/routes/: _layout.tsx  login.tsx  signup.tsx
frontend/src/utils/: colors.ts  tokenRefresh.ts
frontend/tests/: login.spec.ts  reset-password.spec.ts  sign-up.spec.ts  user-settings.spec.ts
frontend/tests/utils/: user.ts
scripts/: check-deployment-status.sh  generate-client.sh
(+94 files in other folders)
