[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard]==0.115.4",
    "python-multipart>=0.0.17",
    "email-validator>=2.1.0.post1",
    "passlib[bcrypt]>=1.7.4",
    "tenacity>=8.2.3",
    "pydantic[email]>=2.8.2",
    "pydantic-settings>=1.0.1",
    "emails>=0.6",
    "gunicorn>=22.0.0",
    "jinja2>=3.1.4",
    "alembic>=1.13.1",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.1.19",
    "sqlmodel>=0.0.21",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.3",
    "python-jose[cryptography]>=3.3.0",
    "openpyxl>=3.1.2",
    "apscheduler>=3.10.4",
]

[tool.uv]
dev-dependencies = [
    "pytest<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "pre-commit<4.0.0,>=3.6.2",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
    "types-sentry-sdk<2.0.0.0",
    "coverage<8.0.0,>=7.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]
warn_unused_ignores = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "openpyxl.*",
    "sentry_sdk.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true
