[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard]==0.124.4",
    "python-multipart>=0.0.17",
    "email-validator>=2.1.0.post1",
    "passlib[bcrypt]>=1.7.4",
    "tenacity>=8.2.3",
    "pydantic[email]>=2.8.2",
    "pydantic-settings>=1.0.1",
    "emails>=0.6",
    "gunicorn>=22.0.0",
    "jinja2>=3.1.4",
    "alembic>=1.13.1",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.1.19",
    "sqlmodel>=0.0.21",
    "sqlalchemy>=2.0.23",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.3",
    "python-jose[cryptography]>=3.3.0",
    "openpyxl>=3.1.2",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.1",
    "typing-extensions>=4.15.0",
]

[tool.uv]
dev-dependencies = [
    "pytest<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "pre-commit<4.0.0,>=3.6.2",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
    "coverage<8.0.0,>=7.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
# Less strict settings to allow gradual type improvement
strict = false
exclude = ["venv", ".venv", "alembic"]
warn_unused_ignores = false  # Disable to allow type: ignore comments
ignore_missing_imports = false
# Allow untyped calls and definitions (gradually improve)
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
# Still check for common issues
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = false
warn_unused_configs = true
# Ignore common SQLAlchemy/SQLModel type checking issues
disable_error_code = [
    "attr-defined",      # SQLModel/SQLAlchemy dynamic attributes
    "arg-type",         # SQLAlchemy query argument types
    "union-attr",       # Union type attribute access
    "index",            # Dictionary/object indexing
    "assignment",       # Type assignment issues
    "name-defined",     # Missing imports (desc, etc.)
    "type-arg",         # Generic type parameters
    "var-annotated",    # Missing type annotations
    "list-item",        # List item type mismatches
]

[[tool.mypy.overrides]]
module = [
    "openpyxl.*",
    "sentry_sdk.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
    "ARG001",  # unused function arguments (common in FastAPI dependency injection)
    "E402",  # module level import not at top (alembic migrations need this)
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true
